src- Version 4.19/objects/Credit_Note__c.object
<CustomObject>
    <customHelpPage>support</customHelpPage>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Notes</relationshipLabel>
        <relationshipName>Credit_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Subtotal</label>
        <summarizedField>Credit_Line__c.Line_Amount__c</summarizedField>
        <summaryForeignKey>Credit_Line__c.Credit_Note__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Credit Notes</relationshipLabel>
        <relationshipName>Credit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Note_Date__c</fullName>
        <label>Credit Note Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Note_Status__c</fullName>
        <label>Credit Note Status</label>
        <picklist>
            <picklistValues>
                <fullName>Posted</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CurrencyL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Credit Notes</relationshipLabel>
        <relationshipName>Credit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount_Value__c</fullName>
        <label>Obsolete Discount Value</label>
        <summarizedField>Credit_Line__c.Discount_Value__c</summarizedField>
        <summaryForeignKey>Credit_Line__c.Credit_Note__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate_Applied__c</fullName>
        <label>Exchange Rate Applied</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Total__c</fullName>
        <formula>Amount__c - Discount_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Credit_Lines__c</fullName>
        <label>Number Of Credit Lines</label>
        <summaryForeignKey>Credit_Line__c.Credit_Note__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Credit Notes</relationshipLabel>
        <relationshipName>Credit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Credit Notes</relationshipLabel>
        <relationshipName>Credit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Credit Notes (Shipping Contact)</relationshipLabel>
        <relationshipName>Credit_Notes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <summarizedField>Credit_Line__c.Tax__c</summarizedField>
        <summaryForeignKey>Credit_Line__c.Credit_Note__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Credit_Note_Value__c</fullName>
        <formula>Amount__c - Discount_Value__c + VAT__c + Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Credit Note Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <label>VAT</label>
        <summarizedField>Credit_Line__c.VAT__c</summarizedField>
        <summaryForeignKey>Credit_Line__c.Credit_Note__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Credit Note</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CN-{0000}</displayFormat>
        <label>Credit Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>